# KhadBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  discord_bot.py  main.py  pyproject.toml  requirements.txt
agent/: coach.py
agents/: coach_agent.py
config/agents/: coach.yaml
config/personas/: khadgar.yaml  thrall.yaml  xalatath.yaml
config/skills/: build_review.yaml  character_sim.yaml  encounter_review.yaml  personal_coaching.yaml
config/templates/: prompt.jinja2
src/: config.py  llm_factory.py
src/KhadBot/: config.py  llm_factory.py
src/KhadBot/agent/: __init__.py  agent_config.py  coach.py  graph.py  orchestrator.py  personas.py  prompt_assembler.py  router.py  skills.py  state.py
src/KhadBot/agent/config/: __init__.py  assembler.py  loader.py  personas.py
src/KhadBot/agent/subgraphs/: __init__.py  build_review.py  character_sim.py  encounter_review.py  personal_coaching.py
src/KhadBot/cli/: __init__.py  cli.py  tool_panel.py
src/KhadBot/tools/: __init__.py  simc.py  warcraftlogs.py  wipefest.py
src/KhadBot/tools/warcraftlogs/: __init__.py  _client.py  _queries.py  character.py  encounter.py  performance.py
src/agent/: coach.py
src/bot/: discord_bot.py
src/cli/: __init__.py  cli.py  console.py  renderer.py  tool_panel.py
src/tools/: __init__.py  rag_search.py  raiderio.py  simc.py  wipefest.py
tests/: conftest.py
tests/fixtures/: agent_payloads.py  raiderio_payloads.py
tests/integration/agent/: test_coach_integration.py
tests/integration/cli/: test_callback_handler_wired.py  test_repl_loop.py  test_tool_panel_live.py
tests/unit/agent/: conftest.py  test_agent_config.py  test_coach_agent.py  test_graph.py  test_orchestrator.py  test_personas.py  test_router.py  test_skills.py
tests/unit/agent/config/: test_assembler.py  test_loader.py  test_personas.py
tests/unit/agent/subgraphs/: test_build_review.py  test_character_sim.py  test_encounter_review.py
tests/unit/cli/: test_cli.py  test_renderer.py  test_tool_panel.py
tests/unit/tools/: test_raiderio.py
tests/unit/tools/warcraftlogs/: test_character.py  test_encounter.py  test_performance.py
tools/: raiderio_tool.py  wow_tools.py
utils/: llm_factory.py
