[project]
name = "khadbot"
version = "0.1.0"
description = "KhadBot — Agentic WoW Assistant"
requires-python = ">=3.12"
dependencies = [
    # --- LangChain / agent framework ---
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",      # base runnables, tools, message types
    "langchain-anthropic>=0.3.0", # Claude Sonnet provider
    "langchain-openai>=0.2.0",    # OpenAI provider + embeddings
    "langchain-groq>=1.1.2",      # Groq provider (fast free-tier inference)
    "langchain-ollama>=1.0.1",    # Ollama provider (local models)
    "langgraph>=0.2.0",           # graph orchestration; used in production phase

    # --- Data validation ---
    "pydantic>=2.12.0",           # tool argument schemas + config models

    # --- Prompt template ---
    "jinja2",                     # agent prompt templates: base, guardrails, persona

    # --- HTTP client ---
    "httpx>=0.27.0",              # async HTTP for Raider.IO, WarcraftLogs, Wipefest
]

[project.optional-dependencies]
cli = [
    # --- CLI ---
    "rich>=13.7.0",               # terminal rendering: panels, tables, live tool panel, markdown output
    "prompt_toolkit>=3.0.0",      # REPL input: history, async prompt, keyboard handling
]

dev = [
    # --- Core test runner ---
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",   # async support for LangChain async calls
    "pytest-mock>=3.14.0",      # cleaner mocker fixture over raw unittest.mock
    "pytest-cov>=5.0.0",        # coverage reporting; run with --cov=src

    # --- HTTP mocking ---
    "respx>=0.21.0",            # async-native HTTP mocking for httpx

    # --- Linting / formatting ---
    "ruff>=0.4.0",              # fast linter + formatter; replaces flake8 + black
    "mypy>=1.10.0",             # static type checking

    # --- CLI ---
    "rich>=13.7.0",             # terminal rendering: panels, tables, live tool panel, markdown output
    "prompt_toolkit>=3.0.0",    # REPL input: history, async prompt, keyboard handling

    # --- LangSmith ---
    "langsmith>=0.1.0",         # trace URL construction, eval dataset management

    # --- Local dev convenience ---
    "python-dotenv>=1.0.0",     # load .env for local development
    "ipython>=8.0.0",           # nicer REPL for debugging agent traces
    "pre-commit>=4.5.0",        # pre-commit hooks
]

[project.scripts]
khadbot = "cli.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
# Auto-mode means you don't need @pytest.mark.asyncio on every async test.
# Many LangChain components are async.
asyncio_mode = "auto"

# Where pytest looks for tests
testpaths = ["tests"]

# Coverage: measure src/, report missing lines, also write HTML report
addopts = """
    --cov=src
    --cov-report=term-missing
    --cov-report=html:htmlcov
    -v"""

# Treat these warnings as errors so they don't silently mask issues
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    # Suppress known Pydantic v1 UserWarnings from langchain_core internals
    "ignore::UserWarning:pydantic",
    "ignore::UserWarning:langchain_core",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "I",    # isort
]
ignore = [
    "E501", # line-too-long (handled by formatter)
    "W191", # tab-indentation
    "E111", # indentation-not-multiple-of-four
    "E114", # indentation-not-multiple-of-four-comment
    "E117", # over-indented
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["khadbot"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
